# tcdb-core

./: .env.example  .gitignore  .renderignore  ADAPTERS_COMPLETE.md  ANIMATED_DEMO_GUIDE.md  ANIMATED_SCENARIOS_COMPARISON.md  API_DEPLOYMENT_COMPLETE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTH_DEPLOYMENT_COMPLETE.md  AUTH_SYSTEM.md  BAYESIAN_INFERENCE.md  BENCHMARKS_AND_TESTING.md  BUILD_SUMMARY.md  CI_AND_PYTHON_SUMMARY.md  CLOUDFLARE_AUTH_SETUP.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_PAGES_SETUP.md  CLOUDFLARE_TUNNEL_SETUP.md  CLOUDFLARE_WORKER_SETUP_COMPLETE.md  COMPLETE_DEMO_SUITE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONFIG_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEMO_COMPLETION_FINAL.md  DEPLOYMENT_SUCCESS.md  DEPLOY_NOW.md  DESCRIPTOR_DOCUMENTATION.md  DESCRIPTOR_ENHANCEMENTS.md  DESCRIPTOR_IMPLEMENTATION_SUMMARY.md  DESCRIPTOR_QUICK_START.md  ENABLE_GITHUB_PAGES.md  ENDPOINT_IMPLEMENTATION_COMPLETE.md  ENTROPY_API_AND_BINDINGS.md  ENTROPY_IMPLEMENTATION_SUMMARY.md  ENTROPY_MODULE.md  ENTROPY_VISUALIZATION_OPTIONS.md  EULER_CHARACTERISTIC.md  FASTAPI_MIGRATION_COMPLETE.md  (+62 more)
.github/workflows/: ci.yml  deploy-pages.yml  eval-hallu.yml
cloudflare-workers/: api-worker.js  api-worker.test.js  auth-worker.js  package.json  vitest.config.js  wrangler-api.toml  wrangler.toml
cloudflare/worker/: .gitignore  QUICK_START.md  README.md  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
demo_results/: demo1_results.json  demo2_results.json  demo3_results.json  demo4_results.json
docs/: .render-buildpacks.json  ADDONS_PACK_GUIDE.md  README.md  USE_CASE_DEMOS_GUIDE.md  auth-integration.js  build.sh  dashboard.html  index.html
examples/: advanced_descriptor_usage.py  basic_usage.py  descriptor_usage.py  llm_live_test.py  provenance_certificate_example.rs  quick_llm_test.py  rips_complex.py
examples/eval/: eval_results.json  hallucination_eval.py  items.jsonl  items_minimal.jsonl  minimal_hallucination_eval.py
kg_tda_tdd_project/kg_tda_tdd_project/: README.md  modular_harness.py  requirements.txt
lean/: README.md  Tcdb.lean  lake-manifest.json  lakefile.lean
lean/.lake/: lakefile.olean  lakefile.olean.trace
python/: README.md
python/examples/: bayesian_inference_example.py  euler_characteristic_example.py  landscape_embeddings_example.py  llm_verification_layer.py  public_datasets_example.py  streaming_example.py
python/scripts/: debug_demo1.py  demo_animated_swarm.py  demo_mvp_api.py  reset_db.py  test_addons.py  use_case_demos.py
python/tcdb_addons/: router.py
python/tcdb_api/: __init__.py  _rust.pyi  app.py  auth.py  database.py  entropy.py  middleware.py  models.py  settings.py
python/tests/: conftest.py  (+19 more)
rust/: Cargo.toml
rust/benches/: new_features.rs  persistent_homology.rs
rust/src/: bayes.rs  bindings.rs  cross_domain.rs  data_proof.rs  embed.rs  entropy.rs  euler.rs  filtration.rs  lib.rs  persistent_homology.rs  provenance.rs  reasoner.rs  simplicial_complex.rs  streaming.rs  topology.rs
rust/tests/: bayes_tests.rs  cross_domain_tests.rs  data_proof_tests.rs  embed_tests.rs  euler_tests.rs  integration_test.rs  provenance_tests.rs  public_data_tests.rs  public_datasets.rs  reasoner_tests.rs  streaming_tests.rs  topology_signature_tests.rs
shared/: Create Lean 4 mathematical verifi.txt  TCDB AI Grounding System - TDD Test.txt  TopoPersist Homepage.html  tcdbcore-next.txt
tcdb_api_tdd/: .env.example  .gitignore  CLERK_MIGRATION_SUMMARY.md  CLERK_SETUP.md  QUICK_START_CLERK.md  README.md  requirements.txt  run_api.py
tests/: test_api_integration.py
topological_streaming_engine/: README.md  requirements.txt  setup.sh
(+98 files in other folders)
