[workspace]
members = ["rust"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["DeepFriedCyber"]
license = "MIT"
repository = "https://github.com/DeepFriedCyber/tcdb-core"

[workspace.dependencies]
ndarray = "0.15"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

