[package]
name = "tcdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tcdb_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "persistent_homology"
harness = false

